--- a/less/variables.less
+++ b/less/variables.less
@@ -13,4 +13,4 @@
 
 @lg-tablet: ~"(max-width: 1024px)";
 @sm-tablet: ~"(max-width:834px)";
-@phone: ~"(max-width: 400px)";
+@phone: ~"(max-width: 450px)";
